samples/_failures_safe/1761797629_82f59c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ae07fab.c: In function ‘main’:
./samples/SAFE/__tmp_0ae07fab.c:151:9: error: expected declaration or statement at end of input
  151 |         fprintf(stderr, "Failed to initialize log collection\n");
      |         ^~~~~~~
./samples/SAFE/__tmp_0ae07fab.c:151:9: error: expected declaration or statement at end of input
